--- a/hard.html
+++ b/hard.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="hard.css">
 </head>
 
-<body >
+<body oncontextmenu="return false">
     <div class="board">
         <div class="card" data-image="img-1">
             <div class="front">?</div>
@@ -62,7 +62,7 @@
     </div>
     <div class="count">
         <div class="name">Flips</div>
-        <div id="move" class="num">15</div>
+        <div id="move" class="num">17</div>
     </div>
     <div class="btn">
         <div id="refresh">Refresh</div>
